# test_kafka

./: .flake8  .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  config.yaml  consumer.py  data.csv  docker-compose.yml  producer.py  pyproject.toml  requirements.txt  run_check.sh  stream_data_processing.py
antispamkafka/: consumer.py  handlers.py  producer.py
antispamkafka/utils/: helpers.py  logger.py  utils.py
logs/2023-02-01/: data.csv
logs/2023-02-02/: data.csv
logs/2023-02-03/: data.csv
logs/2023-02-04/: data.csv
logs/2023-02-05/: data.csv
logs/2023-02-06/: data.csv
logs/2023-02-07/: data.csv
logs/2023-02-08/: data.csv
logs/2023-02-09/: data.csv
logs/2023-02-10/: data.csv
logs/2023-02-11/: data.csv
logs/2023-02-12/: data.csv
logs/2023-02-13/: data.csv
logs/2023-02-14/: data.csv
logs/2023-02-15/: data.csv
logs/2023-02-16/: data.csv
logs/2023-02-17/: data.csv
logs/2023-02-18/: data.csv
logs/2023-02-19/: data.csv
logs/2023-02-20/: data.csv
logs/2023-02-21/: data.csv
logs/2023-02-22/: data.csv
logs/2023-02-24/: data.csv
logs/2023-02-25/: data.csv
logs/2023-02-26/: data.csv
logs/2023-02-27/: data.csv
logs/2023-02-28/: data.csv
logs/2023-03-01/: data.csv
logs/2023-03-02/: data.csv
logs/2023-03-03/: data.csv
logs/2023-03-04/: data.csv
logs/2023-03-05/: data.csv
logs/2023-03-06/: data.csv
logs/2023-03-07/: data.csv
logs/2023-03-08/: data.csv
logs/2023-03-09/: data.csv
logs/2023-03-10/: data.csv
logs/2023-03-11/: data.csv
logs/2023-03-12/: data.csv
logs/2023-03-13/: data.csv
(+305 files in other folders)
